--- a/saga-demo/saga-k8s-resources/base/jmeter-collector.yaml
+++ b/saga-demo/saga-k8s-resources/base/jmeter-collector.yaml
@@ -47,7 +47,7 @@ spec:
     spec:
       containers:
       - name: jmeter-collector
-        image: servicecomb/jmeter-collector:v1
+        image: swr.cn-north-1.myhuaweicloud.com/saga/jmeter-collector:v1
         imagePullPolicy: IfNotPresent
 ---
 
