--- a/saga-demo/saga-spring-demo/docker-compose.yaml
+++ b/saga-demo/saga-spring-demo/docker-compose.yaml
@@ -31,11 +31,22 @@ services:
         timeout: 10s
         retries: 5
 
+  redis:
+    image: "redis:4.0"
+    hostname: redis
+    ports:
+      - 6377:6379
+    healthcheck:
+        test: ["CMD-SHELL", "nc -z localhost 6379 &> /dev/null; echo $$?"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
   alpha:
     image: "alpha-server:${TAG}"
     hostname: alpha-server
     links:
       - "database:postgresql.servicecomb.io"
+      - "redis:redis.servicecomb"
     environment:
       - JAVA_OPTS=-Dspring.profiles.active=prd -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
     ports:
